--- a/src/Global.css
+++ b/src/Global.css
@@ -1,11 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,300&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
-body {    
+html, body {    
     margin: 0;
+    padding: 0;
     height: 100%;
     font-family: 'Roboto', sans-serif;
+}
+
+body > div {
+    height: 100%;
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #73737356;
 }
